# summary-writer

./: .gitignore  README.md  pyproject.toml
src/: config.py  main_dev.py
src/summary_writer/: __init__.py  configuration.py  enums.py  state.py  summary_writer.py
src/summary_writer/components/: __init__.py  citations_manager.py  query_writer.py  reviewer.py  utils.py  writer.py  writer_with_citations.py
